// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth authentication should clear any pending authentication data if the MSAL redirect is not subsequently invoked 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <h1 class=\\"govuk-heading-xl\\">Sorry, there is a problem with the service</h1>
            <p class=\\"govuk-body\\">Try again later.</p>
            <p class=\\"govuk-body\\"><a href=\\"https://has-appeal.herokuapp.com/help/contact\\" class=\\"govuk-link\\">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
            <hr>
            <h1 class=\\"govuk-heading-m\\" style=\\"color: #d4351c;\\">Error (only seen in dev mode):</h1>
            <div class=\\"govuk-grid-row\\">
                <div class=\\"govuk-grid-column-full\\">
                    <div>Error: Authentication does not exist.</div>}<pre style=\\"border: 1px solid #ddd; overflow: scroll\\"> Error: Authentication does not exist.
    at Module.getAuthenticationData (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/apps/web/src/server/app/auth/auth-session.service.js:32:8)
    at completeMsalAuthentication (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/apps/web/src/server/app/auth/auth.controller.js:57:55)
    at Layer.handleRequest (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/layer.js:101:15)
    at next (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/route.js:142:13)
    at assertIsUnauthenticated (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/apps/web/src/server/app/auth/auth.guards.js:56:3)
    at Layer.handleRequest (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/layer.js:101:15)
    at next (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/route.js:142:13)
    at Route.dispatch (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/route.js:107:3)
    at handle (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/index.js:421:11)
    at Layer.handleRequest (/Users/francescobrenci/Documents/DEVELOPMENT/back-office/node_modules/router/lib/layer.js:101:15)</pre>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`auth authentication should display a logout link in the header when the user is authenticated 1`] = `
"<div class=\\"govuk-header__content\\">
    <nav aria-label=\\"Menu\\" class=\\"govuk-header__navigation pins-header__navigation--align-right\\">
        <button type=\\"button\\" class=\\"govuk-header__menu-button govuk-js-header-toggle\\"
        aria-controls=\\"navigation\\" aria-label=\\"Show or hide menu\\">Menu</button>
        <ul id=\\"navigation\\" class=\\"govuk-header__navigation-list\\"></ul>
    </nav>
</div>"
`;

exports[`auth authentication should display a logout link in the header when the user is authenticated 2`] = `
"<div class=\\"govuk-header__content\\">
    <nav aria-label=\\"Menu\\" class=\\"govuk-header__navigation pins-header__navigation--align-right\\">
        <button type=\\"button\\" class=\\"govuk-header__menu-button govuk-js-header-toggle\\"
        aria-controls=\\"navigation\\" aria-label=\\"Show or hide menu\\">Menu</button>
        <ul id=\\"navigation\\" class=\\"govuk-header__navigation-list\\">
            <li class=\\"govuk-header__navigation-item\\"><a class=\\"govuk-header__link\\" href=\\"https://login.microsoftonline.com/common/oauth2/v2.0/logout\\"> Sign out</a>
            </li>
        </ul>
    </nav>
</div>"
`;

exports[`auth authorization should display the services page when a user belongs to more than one group 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-width-container govuk-width-container\\">
        <div class=\\"govuk-grid-row\\">
            <div class=\\"govuk-grid-column-one-half\\">
                <h2 class=\\"govuk-heading-m\\">Applications</h2>
                <ul class=\\"govuk-list\\">
                    <li><a href=\\"/applications-service/case-officer\\" class=\\"govuk-link\\">Case officer</a>
                    </li>
                </ul>
            </div>
            <div class=\\"govuk-grid-column-one-half\\">
                <h2 class=\\"govuk-heading-m\\">Appeals</h2>
                <ul class=\\"govuk-list\\">
                    <li><a href=\\"/appeals-service/validation\\" class=\\"govuk-link\\">Validation officer</a>
                    </li>
                </ul>
            </div>
        </div>
    </div>
</main>"
`;
